--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
+    "copy-webpack-plugin": "^11.0.0",
     "emailjs-com": "^3.2.0",
     "next": "13.2.4",
     "react": "18.2.0",
